Wrap + displace + multires + Sculpt crash #71503

Closed
opened 2019-11-11 21:36:56 +01:00 by Mobin · 16 comments

Blender Version
Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-04 22:14, hash: 95a60fe84d
Worked: 2.80

Short description of error
Adding wrap + displace + multires causes a crash

Exact steps for others to reproduce the error

  • Make a sphere with 2 empty and set up a wrap modifier
  • Add displacement modifier
  • Add multires modifier
  • Do 2 subdiv in the multires (notice mesh not changing)
  • Go to sculpt mode
  • Crash

OR open file, switch to sculpt mode and start sculpting:
bugrep02.blend

**Blender Version** Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-04 22:14, hash: `95a60fe84d` Worked: 2.80 **Short description of error** Adding wrap + displace + multires causes a crash **Exact steps for others to reproduce the error** - Make a sphere with 2 empty and set up a wrap modifier - Add displacement modifier - Add multires modifier - Do 2 subdiv in the multires (notice mesh not changing) - Go to sculpt mode - Crash OR open file, switch to sculpt mode and start sculpting: [bugrep02.blend](https://archive.blender.org/developer/F8039659/bugrep02.blend)
Author

Added subscriber: @Mobin-2

Added subscriber: @Mobin-2
Author

here is a test file just add multires modifier
do 2 subdiv in the multires (notice mesh not changing)
go to sculpt mode
crash

bugrep01.blend

here is a test file just add multires modifier do 2 subdiv in the multires (notice mesh not changing) go to sculpt mode crash [bugrep01.blend](https://archive.blender.org/developer/F8037166/bugrep01.blend)

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Do 2 subdiv in the multires (notice mesh not changing)

Could you please clarify how you are doing that? Or even, attach a file right before going to sculpt.

> Do 2 subdiv in the multires (notice mesh not changing) Could you please clarify how you are doing that? Or even, attach a file right before going to sculpt.
Author

crashes after you go to sculpt mode.
works with no crash on 2.80 but crashes on 2.81
bugrep02.blend

crashes after you go to sculpt mode. works with no crash on 2.80 but crashes on 2.81 [bugrep02.blend](https://archive.blender.org/developer/F8039659/bugrep02.blend)

Added subscribers: @PabloDobarro, @Sergey

Added subscribers: @PabloDobarro, @Sergey

I can confirm the crash.

@PabloDobarro I thought we have fixed all the multires bugs. Is this a know issue?

I can confirm the crash. @PabloDobarro I thought we have fixed all the multires bugs. Is this a know issue?
Dalai Felinto changed title from wrap + displace + multires causes crash to Wrap + displace + multires + Sculpt crash 2019-11-12 03:27:32 +01:00

For the records, I think you may not even need the other modifiers, the multires alone seems to still break things. That said I need to rebuild blender with more libs to fully debug this, so considering the report triaged as it is.

For the records, I think you may not even need the other modifiers, the multires alone seems to still break things. That said I need to rebuild blender with more libs to fully debug this, so considering the report triaged as it is.
Member

Multires has a lot of issues and bugs when used combined with other modifiers. Maybe we can make it not crash by disabling some sculpting features in Multires (bad idea, as this is a unusual use case) or avoiding entering sculpt mode in some situations (like Multires + more modifiers or sculpting in a level other than the highest one).
I don't think we should spend time trying to debug and make proper fixes to bugs like this one (or doing any other Multires related development) before fixing studio/blender-studio#58473. Even if we fix all these crashes, Multires is going to keep breaking the models, making it unusable for its intended purpose. The end user is not going to get any real benefits from this development work.

Multires has a lot of issues and bugs when used combined with other modifiers. Maybe we can make it not crash by disabling some sculpting features in Multires (bad idea, as this is a unusual use case) or avoiding entering sculpt mode in some situations (like Multires + more modifiers or sculpting in a level other than the highest one). I don't think we should spend time trying to debug and make proper fixes to bugs like this one (or doing any other Multires related development) before fixing studio/blender-studio#58473. Even if we fix all these crashes, Multires is going to keep breaking the models, making it unusable for its intended purpose. The end user is not going to get any real benefits from this development work.

Even if we fix all these crashes, Multires is going to keep breaking the models, making it unusable for its intended purpose. The end user is not going to get any real benefits from this development work.

I see your point, but I disagree here. Make it not crash is a real benefit, regardless of what made the users mix the modifiers. Broken files are ok-ish, lost work due to a crash is very costy in the end.

> Even if we fix all these crashes, Multires is going to keep breaking the models, making it unusable for its intended purpose. The end user is not going to get any real benefits from this development work. I see your point, but I disagree here. Make it not crash is a real benefit, regardless of what made the users mix the modifiers. Broken files are ok-ish, lost work due to a crash is very costy in the end.
Member

studio/blender-studio#58473 is worse than any crash we currently have in terms of losing work. Saving wrong information and corrupting a file without knowing it is always much worse than a crash (you can always recover the last saved version). Current Blender users know that Multires is not suitable for sculpting, but new users may lose days of work without noticing it with that bug.

This is probably not really related to this task, but in my opinion, a fix or workaround for studio/blender-studio#58473 should block the release. I'm not aware of any other bug in Blender that is damaging an area of the software as badly as this one. We need to acknowledge that we have the most basic and fundamental feature of any sculpting software broken, so anything built on top of that is not going to benefit anyone. During the 2.81 development, multiple developers spend time on Multires related projects (optimizing it, porting the tools, Quadriflow..) that no one is going to be able to use in a real use case just because of that bug. In my opinion, we should have a way to detect and make a plan for this kind of issue earlier to prevent this from happening again.

studio/blender-studio#58473 is worse than any crash we currently have in terms of losing work. Saving wrong information and corrupting a file without knowing it is always much worse than a crash (you can always recover the last saved version). Current Blender users know that Multires is not suitable for sculpting, but new users may lose days of work without noticing it with that bug. This is probably not really related to this task, but in my opinion, a fix or workaround for studio/blender-studio#58473 should block the release. I'm not aware of any other bug in Blender that is damaging an area of the software as badly as this one. We need to acknowledge that we have the most basic and fundamental feature of any sculpting software broken, so anything built on top of that is not going to benefit anyone. During the 2.81 development, multiple developers spend time on Multires related projects (optimizing it, porting the tools, Quadriflow..) that no one is going to be able to use in a real use case just because of that bug. In my opinion, we should have a way to detect and make a plan for this kind of issue earlier to prevent this from happening again.
Author

just a quick Note: the bug will not happen if you toggle all or one of the before modifiers. (show wrap, hide displace OR hide wrap, show displace )
also never noticed this warning before:
Annotation 2019-11-12 130906.jpg
Maybe a simple code of preventing users going to sculpt mode with this warning on is ok for now?

just a quick Note: the bug will not happen if you toggle all or one of the before modifiers. (show wrap, hide displace OR hide wrap, show displace ) also never noticed this warning before: ![Annotation 2019-11-12 130906.jpg](https://archive.blender.org/developer/F8045605/Annotation_2019-11-12_130906.jpg) Maybe a simple code of preventing users going to sculpt mode with this warning on is ok for now?

This issue was referenced by ca1721270a

This issue was referenced by ca1721270a6d3fa8d67b59a014ab94004e24026b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sergey Sharybin self-assigned this 2019-11-13 11:37:56 +01:00

Added subscriber: @ErickNyanduKabongo

Added subscriber: @ErickNyanduKabongo

In #71503#809435, @PabloDobarro wrote:
Multires has a lot of issues and bugs when used combined with other modifiers. Maybe we can make it not crash by disabling some sculpting features in Multires (bad idea, as this is a unusual use case) or avoiding entering sculpt mode in some situations (like Multires + more modifiers or sculpting in a level other than the highest one).
I don't think we should spend time trying to debug and make proper fixes to bugs like this one (or doing any other Multires related development) before fixing studio/blender-studio#58473. Even if we fix all these crashes, Multires is going to keep breaking the models, making it unusable for its intended purpose. The end user is not going to get any real benefits from this development work.

I m wondering why we are not doing full multires. overhaul? Note that Multires. is the only tool in Blender that can help us to get more than 20 Millions polygons with responsive 3d viewport. In stand of turn off some features in multires. or adding more features in sculpt mode it will be good to rework multires.
For you to know there is old users using Multires. even in this " broken" state.

> In #71503#809435, @PabloDobarro wrote: > Multires has a lot of issues and bugs when used combined with other modifiers. Maybe we can make it not crash by disabling some sculpting features in Multires (bad idea, as this is a unusual use case) or avoiding entering sculpt mode in some situations (like Multires + more modifiers or sculpting in a level other than the highest one). > I don't think we should spend time trying to debug and make proper fixes to bugs like this one (or doing any other Multires related development) before fixing studio/blender-studio#58473. Even if we fix all these crashes, Multires is going to keep breaking the models, making it unusable for its intended purpose. The end user is not going to get any real benefits from this development work. I m wondering why we are not doing full multires. overhaul? Note that Multires. is the only tool in Blender that can help us to get more than 20 Millions polygons with responsive 3d viewport. In stand of turn off some features in multires. or adding more features in sculpt mode it will be good to rework multires. For you to know there is old users using Multires. even in this " broken" state.
Thomas Dinges added this to the 2.81 milestone 2023-02-08 16:46:55 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71503
No description provided.